# Kirikiroid2AVN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
project/android/app/cpp/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/environ/: tjsAndroid.h  typedefine.h
src/core/tjs2/: tjsString.cpp  tjsString.h  tjsTypes.h
src/plugins/: CMakeLists.txt  textrender.cpp  windowsEx.cpp  xp3filter.cpp
src/plugins/layerex_draw/: CMakeLists.txt
src/plugins/layerex_draw/general/: LayerExDraw.cpp  LayerExDraw.hpp  gdip_cxx.h
src/plugins/ncbind/: bitap_fuzzy.hpp
